Bug 374123 - Date Entry change to land on month part instead of day part
Summary: Date Entry change to land on month part instead of day part
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-24 18:08 UTC by Joe Byers
Modified: 2019-08-31 15:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1, 5.0.7
Sentry Crash Report:


Attachments
0001-Allow-the-user-to-select-the-initial-date-cursor-pos.patch (6.96 KB, patch)
2018-09-30 08:28 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Byers 2016-12-24 18:08:54 UTC
When entering transactions, and you tab to the date field, the cursor lands on the day part of the date.  If we are in Europe where the date format is dd/mm this would be fine.  But I am in the good on arrogant USA and this makes data entry a bother.  I have to back arrow or mouse click back to the month part of the mm/dd formatted date filed. I can't use backspace since it will keep on the day part while deleting the day.

Can we get a configuration setting for this or get the program to test the local date format and land on the first component not be fixed on landing on the day.

Also, could the tab movement be for jumping to the next date part not the next field?

These are convenience things, but every time, which is once or twice a year when I update everything, I get frustrated.

Happy Holidays.
Comment 1 Thomas Baumgart 2016-12-25 09:52:25 UTC
Git commit b22c965f5848642725ceb6c7ed7b22fdc296a950 by Thomas Baumgart.
Committed on 25/12/2016 at 09:47.
Pushed by tbaumgart into branch '4.8'.

Use first date section to start editing

Use the first section of the date edit widget for the selected date
format instead of always using the day section
FIXED-IN: 4.8.1

M  +12   -8    kmymoney/widgets/kmymoneydateinput.cpp
M  +33   -24   kmymoney/widgets/kmymoneydateinput.h

https://commits.kde.org/kmymoney/b22c965f5848642725ceb6c7ed7b22fdc296a950
Comment 2 Joe Byers 2016-12-29 15:01:31 UTC
When will this fix be in the rpm 4.8 version?  

Happy New Year!
Comment 3 Anguo 2018-01-30 07:07:06 UTC
Bug 389631 - Date edit should default on day section 
https://bugs.kde.org/show_bug.cgi?id=389631
Comment 4 Ralf Habacker 2018-02-06 20:07:56 UTC
Git commit e0e1604642ac5245d232349f7a5cf203652075af by Ralf Habacker.
Committed on 06/02/2018 at 20:05.
Pushed by habacker into branch '4.8'.

Fix issues with multiple instances of KMyMoneySettings

Calling a static method from class KMyMoneyGlobalSettings inside
kmm_widgets library surprisingly creates an additional KMymoneySettings
instance, which does not reflect the recent state from the setting dialog.
The reason for this behavior is caused by duplicated implementations of
class KMymoneySettings (kmm_config, settings) and embedding the static
library kmm_config into shared libraries (kmm_mymoney, kmm_widgets and
kmm_ofximport). Each embedded copy has it's own instance of class
KMymoneySettings.

The solution for this issue, which is done with this patch, is to remove
the duplicated implementation from the settings library and to make
kmm_config a shared library.

This patch also renames kmm_config to kmm_settings and place it into it
own subdirectory to keep in sync with 5.0 branch.
Related: bug 389631
FIXED-IN:4.8.2

Test Plan: compiled on linux

Reviewers: #kmymoney, tbaumgart

Reviewed By: tbaumgart

Subscribers: tbaumgart

Differential Revision: https://phabricator.kde.org/D10322

M  +10   -10   kmymoney/CMakeLists.txt
M  +1    -1    kmymoney/converter/CMakeLists.txt
M  +1    -8    kmymoney/dialogs/settings/CMakeLists.txt
M  +1    -1    kmymoney/models/CMakeLists.txt
M  +1    -1    kmymoney/mymoney/CMakeLists.txt
M  +1    -1    kmymoney/plugins/onlinetasks/sepa/CMakeLists.txt
M  +5    -5    kmymoney/reports/CMakeLists.txt
A  +13   -0    kmymoney/settings/CMakeLists.txt
R  +0    -0    kmymoney/settings/kmymoney.kcfg [from: kmymoney/kmymoney.kcfg - 100% similarity]
R  +2    -0    kmymoney/settings/kmymoneysettings.kcfgc [from: kmymoney/kmymoneysettings.kcfgc - 053% similarity]
M  +4    -4    kmymoney/widgets/CMakeLists.txt

https://commits.kde.org/kmymoney/e0e1604642ac5245d232349f7a5cf203652075af
Comment 5 Ralf Habacker 2018-02-06 20:07:56 UTC
Git commit 904775b2005c888abaf869b70ab8c46f0e1e5074 by Ralf Habacker.
Committed on 06/02/2018 at 20:06.
Pushed by habacker into branch '4.8'.

Allow the user to select the initial date cursor position in the settings dialog

As default the cursor position is set to the day part of the date field.

This patch contains a fix to be compilable with gcc 4.8.
Related: bug 389631
FIXED-IN:4.8.2

Test Plan: compiled and tested on linux

Reviewers: #kmymoney, tbaumgart

Reviewed By: #kmymoney, tbaumgart

Subscribers: tbaumgart

Differential Revision: https://phabricator.kde.org/D10310

M  +46   -0    kmymoney/dialogs/settings/ksettingsregisterdecl.ui
M  +9    -0    kmymoney/settings/kmymoney.kcfg
M  +1    -0    kmymoney/settings/kmymoneysettings.kcfgc
M  +12   -4    kmymoney/widgets/kmymoneydateinput.cpp

https://commits.kde.org/kmymoney/904775b2005c888abaf869b70ab8c46f0e1e5074
Comment 6 Ralf Habacker 2018-09-30 08:28:23 UTC
Created attachment 115324 [details]
0001-Allow-the-user-to-select-the-initial-date-cursor-pos.patch

Refactored patch for 5.x and master branch.
Unfortunally does not work for unknown reasons
Comment 7 Ralf Habacker 2019-08-31 08:10:05 UTC
KF5 related commit https://commits.kde.org/kmymoney/b22c965f5848642725ceb6c7ed7b22fdc296a950
Comment 8 Thomas Baumgart 2019-08-31 15:36:40 UTC
Git commit 5f5848ba2b3a2148aa402fe87d8c41ba1ebdb329 by Thomas Baumgart.
Committed on 31/08/2019 at 15:36.
Pushed by tbaumgart into branch '5.0'.

Allow to modify the initial section of a date edit by the user

This introduces a new option on the data entry tab of the ledger
settings page.

GUI:
FIXED-IN: 4.8.1,5.0.7

M  +48   -6    kmymoney/dialogs/settings/ksettingsregister.ui
M  +9    -0    kmymoney/settings/kmymoney.kcfg
M  +1    -0    kmymoney/settings/kmymoneysettings.kcfgc
M  +18   -5    kmymoney/widgets/kmymoneydateinput.cpp
M  +3    -0    kmymoney/widgets/kmymoneydateinput.h

https://commits.kde.org/kmymoney/5f5848ba2b3a2148aa402fe87d8c41ba1ebdb329