Use first date section to start editing

Use the first section of the date edit widget for the selected date
format instead of always using the day section

BUG: 374123
FIXED-IN: 4.8.1